fix  buttNavItem content alignment issues

--- a/src/components/Homepage/CSS/Toolbar/butt_nav_item.module.css
+++ b/src/components/Homepage/CSS/Toolbar/butt_nav_item.module.css
@@ -1,9 +1,11 @@
 .buttNavItem {
 	height: 100%;
-	width: 50%;
-	text-align: center;
+	flex: 1;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 	margin: 0;
-	padding: 5px;
 	box-sizing: border-box; 
 	list-style: none;
 	cursor: pointer;
